--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ tmp/
 
 # exclude standard config files in favor or .dist files
 app/configs/chargify.ini
+app/configs/chargifyV2.ini
 app/configs/zferral.ini
 
 # exclude docs. those will be auto generated
