--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ app/configs/zferral.ini
 
 # exclude docs. those will be auto generated
 www/docs/
+
+# exclude .htaccess since that will be customized per installation
+www/.htaccess
